--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,7 @@
         <dependency>
             <groupId>org.seleniumhq.selenium</groupId>
             <artifactId>selenium-java</artifactId>
-            <version>4.5.0</version>
+            <version>4.27.0</version>
         </dependency>
         <!-- Cucumber -->
         <dependency>
@@ -68,6 +68,12 @@
             <artifactId>log4j-slf4j-impl</artifactId>
             <version>2.17.2</version>
             <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.seleniumhq.selenium</groupId>
+            <artifactId>selenium-devtools-v131</artifactId>
+            <version>4.27.0</version>
         </dependency>
     </dependencies>
 
